--- a/index.html
+++ b/index.html
@@ -7,5 +7,9 @@
 </head>
 <body>
     <h1>Hola, acabo de modificar el titulo</h1>
+
+    <form action="#" method="get">
+        <input type="button" value="Enviar">
+    </form>
 </body>
 </html>
